2004-09-11  Malcolm Purvis  <malcolmp@xemacs.org>

	* config.h.in: Added entries for sys/resource.h, sys/vlimit.h,
	getrlimit() and vlimit().
	* mem-limits.h: Use configure to check for the presence of
	OS-specific functions.  General cleanup.

2004-09-10  Jerry James  <james@xemacs.org>

	* intl-encap-win32.c (qxeDocumentProperties): Conditionalize
	Cygwin bug workaround on w32api header version.

2004-08-18  Felix H. Gatzemeier  <f.g@tzemeier.info>

	* alloc.c (malloced_storage_size): Renamed log to log2, twice,
	to fix a shadow warning in gcc 3.3.4.

2004-09-10  Malcolm Purvis  <malcolmp@xemacs.org>

	* Makefile.in.in: Enable support for parallel builds.

2004-08-26  Jerry James  <james@xemacs.org>

	* device-x.c (x_init_device): Remove unused variable device.
	* device-x.c (x_delete_device): Ditto.

2004-08-26  Jerry James  <james@xemacs.org>

	* eval.c (Ffuncall): Remove unused variable orig_fun.

2004-08-26  Jerry James  <james@xemacs.org>

	* event-Xt.c (emacs_Xt_unselect_console): Remove unused variable
	console.

2004-08-26  Jerry James  <james@xemacs.org>

	* event-stream.c (munge_keymap_translate): Remove unused variable n.

2004-08-26  Jerry James  <james@xemacs.org>

	* glyphs-eimage.c (tiff_memory_write): Use RETURN_NOT_REACHED.

2004-08-26  Jerry James  <james@xemacs.org>

	* gutter.c (output_gutter): Removed unused variable frame.

2004-08-25  Jerry James  <james@xemacs.org>

	* redisplay-x.c (x_output_string): Remove unused variable device.

2004-08-12  Jerry James  <james@xemacs.org>

	* window.c (margin_width_internal): Remove unused variable b.
	* toolbar-common.c (common_output_toolbar_button): Remove unused
	variable frame.

2004-08-10  Jerry James  <james@xemacs.org>

	* emacs.c (really_abort): make its return type DOESNT_RETURN.
	* lisp.h: declare really_abort with DECLARE_DOESNT_RETURN.

2004-08-04  Jerry James  <james@xemacs.org>

	* regex.c: Fix the previous patch by moving to the right place.

2004-08-03  Jerry James  <james@xemacs.org>
